Fix scrollbar jumping

--- a/GirafRest/wwwroot/admin/css/styles.css
+++ b/GirafRest/wwwroot/admin/css/styles.css
@@ -8,3 +8,5 @@
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+html {overflow-y:scroll !important;}
